- Fixing the fade-in + fade-out between messages - Fixing the JSON days structure.. previously it was an object but I turned it into an array of days (makes it more comfortable for testing) - Adding method to check if the message is in schedule
* Currently, no message is in schedule but you can make modifications in the data.json file in order to test it, so good luck

--- a/templates/1.html
+++ b/templates/1.html
@@ -15,7 +15,7 @@
 <div class="panel panel-default">
   <div class="panel-body">
 
-    <h3>הודעה מספר 1 </h3>
+    <!--<h3>תבנית א'</h3>-->
 
     <div id="content">
     </div>
