--- a/templates/2.html
+++ b/templates/2.html
@@ -15,7 +15,7 @@
 <div class="panel panel-default">
   <div class="panel-body">
 
-    <h3>הודעה מספר 2 </h3>
+    <!--<h3>תבנית ב'</h3>-->
 
     <div id="content">
     </div>
