--- a/templates/3.html
+++ b/templates/3.html
@@ -15,7 +15,7 @@
 <div class="panel panel-default">
   <div class="panel-body">
 
-    <h3>הודעה מספר 3 </h3>
+    <!--<h3>תבנית ג'</h3>-->
 
     <div id="content">
     </div>
